--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,11 +1,12 @@
 $primary: #89A3C6;
 $secondary: #525252;
+$background: #F6F6F6;
 
 $vogue: 'Vogue';
 $champagne: 'Champagne';
 
 $small_header_size: 34px;
 $small_title_size: 28px;
-$small_subtitle_size: 22px;
+$small_subtitle_size: 24px;
 $small_normal_size: 18px;
 $small_text_size: 16px;
