--- a/styles/atoms/Button.module.scss
+++ b/styles/atoms/Button.module.scss
@@ -7,8 +7,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 2px;
     color: #fff;
     font-size: $small_normal_size;
     cursor: pointer;
+    border: 2px solid $primary;
+    transition: all 300ms;
+
+    &:hover {
+        background-color: transparent;
+        color: $primary;
+    }
 }
