--- a/styles/molecules/Category.module.scss
+++ b/styles/molecules/Category.module.scss
@@ -35,12 +35,14 @@
             font-size: $small_subtitle_size;
             font-weight: 300;
             margin-bottom: 15px;
+            color: $secondary;
         }
 
         p {
             text-align: center;
             font-size: $small_text_size;
             font-weight: 300;
+            color: $secondary;
         }
     }
 }
