--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -19,4 +19,39 @@
             margin-bottom: 50px;
         }
     }
+
+    &__warranty {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 30px;
+
+        &-icon {
+            width: 85px;
+            height: 85px;
+            background-color: $primary;
+            border-radius: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &-check {
+            color: white;
+            font-size: $small_title_size;
+        }
+
+        h3 {
+            margin-top: 25px;
+            font-size: $small_subtitle_size;
+            color: $secondary;
+        }
+
+        p {
+            text-align: center;
+            margin-top: 25px;
+            color: $secondary;
+        }
+    }
 }
