--- a/styles/atoms/HeroPolaroid.module.scss
+++ b/styles/atoms/HeroPolaroid.module.scss
@@ -1,44 +1,91 @@
+@import "../vars";
+
 .hero-polaroid {
-    background-color: #333;
-    padding: 15px;
+  background-color: #333;
+  padding: 15px;
 
-    &__wrapper {
-        background-color: #fff;
-        width: 100%;
-        height: 85%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  &__wrapper {
+    background-color: #fff;
+    width: 100%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &--xl {
+    width: 250px;
+    height: 300px;
+
+    img {
+      width: 90px;
+      height: 185px;
     }
 
-    &--xl {
-        width: 250px;
-        height: 300px;
+    @include large {
+      width: 300px;
+      height: 350px;
 
-        img {
-            width: 90px;
-            height: 185px;
-        }
+      img {
+        width: 110px;
+        height: 200px;
+      }
     }
 
-    &--md {
-        width: 250px;
-        height: 300px;
+    @include extra-large {
+      width: 350px;
+      height: 430px;
 
-        img {
-            width: 90px;
-            height: 185px;
-        }
+      img {
+        width: 130px;
+        height: 220px;
+      }
+    }
+  }
+
+  &--md {
+    display: none;
+    width: 200px;
+    height: 250px;
+
+    img {
+      width: 75px;
+      height: 175px;
     }
 
-    &--sm {
+    @include large {
+      display: block;
+    }
+
+    @include extra-large {
+      width: 250px;
+      height: 300px;
+
+      img {
+        width: 90px;
+        height: 190px;
+      }
+    }
+  }
+
+  &--sm {
     padding: 10px;
-        width: 150px;
-        height: 185px;
+    width: 150px;
+    height: 185px;
 
-        img {
-            width: 65px;
-            height: 125px;
-        }
+    img {
+      width: 65px;
+      height: 125px;
     }
+
+    @include extra-large {
+      width: 190px;
+      height: 240px;
+
+      img {
+        width: 85px;
+        height: 145px;
+      }
+    }
+  }
 }
