--- a/styles/organisms/Hero.module.scss
+++ b/styles/organisms/Hero.module.scss
@@ -1,46 +1,134 @@
-@import '../vars';
+@import "../vars";
 
 .hero {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+
+  max-height: 667px;
+
+  @include large {
+    max-height: 800px;
+  }
+
+  @include extra-x-large {
+    max-height: 100vh;
+  }
+
+  &__content {
     width: 100%;
-    height: 100vh;
-    max-height: 667px;
+    height: 100%;
     padding: 25px;
     padding-top: 125px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1500px;
 
-    &__images {
-        display: flex;
-        width: 375;
+    @include large {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      max-height: 100vh;
+      padding: 50px;
+    }
+  }
+
+  &__btn {
+    @include large {
+      width: 250px;
     }
 
-    &__image-small {
-        // left: 0;
-        right: 0;
-        margin: 0 auto;
-        z-index: 1;
-        margin-top: 150px;
-        margin-left: -100px;
+    @include medium {
+        width: 400px;
+    }
+  }
+
+  &__images {
+    display: flex;
+    width: 375;
+    height: 100%;
+    align-items: center;
+  }
+
+  &__image-sm {
+    // left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 1;
+    margin-top: 150px;
+    margin-left: -100px;
+
+    @include large {
+      z-index: -1;
+      margin-bottom: 400px;
+      margin-left: -100px;
     }
 
-    &__image-xl {
-        left: 0;
-        margin: 0 auto;
+    @include extra-large {
+        margin-bottom: 400px;
+      margin-left: -150px;
+    }
+  }
+
+  &__image-md {
+    right: 0;
+    margin: 0 auto;
+    z-index: 1;
+    margin-top: 200px;
+    margin-left: -90px;
+
+    @include extra-large {
+        margin-top: 300px;
+    margin-left: -90px;
+    }
+  }
+
+  &__image-xl {
+    left: 0;
+    margin: 0 auto;
+  }
+
+  &__info {
+    margin-top: 50px;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+    h2 {
+      margin-bottom: 30px;
+      font-size: $small_title_size;
+      color: $secondary;
     }
 
-    &__info {
-        margin-top: 50px;
-        width: 75%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
+    p {
+      display: none;
 
-        h2 {
-            margin-bottom: 30px;
-            font-size: $small_title_size;
-            color: $secondary;
-        }
+      @include large {
+        display: block;
+      }
     }
+
+    @include large {
+      width: 50%;
+      align-items: flex-start;
+
+      h2 {
+        font-size: $normal_title_size;
+        color: $secondary;
+      }
+
+      p {
+        font-size: $normal_text_size;
+        color: $secondary;
+        margin-bottom: 25px;
+      }
+    }
+
+    @include extra-large {
+        width: 35%;
+    }
+  }
 }
