--- a/styles/organisms/References.module.scss
+++ b/styles/organisms/References.module.scss
@@ -8,13 +8,20 @@
         width: 100%;
         height: 300px;
         background-color: #fff;
+        max-width: 500px;
+
+        @include medium {
+            border-radius: 5px;
+        }
 
         :global(.swiper-pagination-bullet) {
             background: #ABABAB;
+            opacity: 1;
         }
         
         :global(.swiper-pagination-bullet-active) {
           background-color: $primary;
+          opacity: 1;
         }
     }
 
@@ -28,6 +35,10 @@
         width: 75%;
         margin-top: 50px;
         margin-bottom: 25px;
+
+        @include medium {
+            width: 350px;
+        }
     }
 
     &__info {
@@ -44,6 +55,7 @@
         p {
             text-align: center;
             font-size: $small_text_size;
+            max-width: 500px;
         }
     }
 }
