--- a/styles/atoms/HeroPolaroid.module.scss
+++ b/styles/atoms/HeroPolaroid.module.scss
@@ -3,11 +3,18 @@
 .hero-polaroid {
   background-color: #333;
   padding: 15px;
+  z-index: 100;
 
   &__wrapper {
     background-color: #fff;
     width: 100%;
     height: 85%;
+
+  }
+
+  &__slide {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
