--- a/styles/atoms/NavLink.module.scss
+++ b/styles/atoms/NavLink.module.scss
@@ -1,15 +1,24 @@
-@import '../vars';
+@import "../vars";
 
 .item {
-    padding: 0px 15px;
-    display: flex;
-    color: $secondary;
+  padding: 0px 15px;
+  display: flex;
+  color: $secondary;
+  height: 100%;
+  align-items: center;
+  cursor: pointer;
+  transition: all 300ms;
 
-    &__icon {
-        font-size: $small_normal_size;
-    }
+  &:hover {
+    background-color: $primary;
+    color: white !important;
+  }
 
-    span {
-        margin-left: 10px;
-    }
+  &__icon {
+    font-size: $small_normal_size;
+  }
+
+  span {
+    margin-left: 10px;
+  }
 }
