--- a/styles/atoms/shared/Button.module.scss
+++ b/styles/atoms/shared/Button.module.scss
@@ -18,4 +18,15 @@
         background-color: transparent;
         color: $primary;
     }
+
+    &--outlined {
+        background-color: #fff;
+        border: 2px solid $primary;
+        color: $primary;
+
+        &:hover {
+            background-color: $primary;
+            color: #fff;
+        }
+    }
 }
