Login, Register Logic And Basic Auth middleware

--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -2,6 +2,7 @@ $primary: #89A3C6;
 $secondary: #525252;
 $background: #F6F6F6;
 $dark: #555555;
+$danger: #FF4B4B;
 
 $vogue: 'Vogue';
 $champagne: 'Champagne';
