--- a/styles/atoms/shared/FormControl.module.scss
+++ b/styles/atoms/shared/FormControl.module.scss
@@ -10,10 +10,26 @@
   align-items: center;
   padding-left: 15px;
 
+  &--error {
+    border: 1px solid $danger;
+  }
+
+  &--success {
+    border-color: $primary;
+  }
+
   &__icon {
     font-size: $small_subtitle_size;
     color: $dark;
     margin-right: 15px;
+
+    &--error {
+      color: $danger;
+    }
+
+    &--success {
+      color: $primary;
+    }
   }
 
   input {
@@ -21,6 +37,6 @@
     border: none;
     font-size: $normal_text_size;
     outline: none;
-    width: 100%;
+    width: 90%;
   }
 }
