--- a/styles/pages/Sign.module.scss
+++ b/styles/pages/Sign.module.scss
@@ -1,3 +1,5 @@
+@import '../vars';
+
 .login {
   width: 100vw;
   min-height: 100vh;
@@ -8,13 +10,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 75px 1fr;
-    justify-content: center;
+    justify-items: center;
     align-items: center;
-  }
-
-  &__form {
-    width: 100%;
-    height: 100%;
-    grid-row: 2 / 3;
   }
 }
