--- a/styles/pages/Profile.module.scss
+++ b/styles/pages/Profile.module.scss
@@ -2,14 +2,17 @@
 
 .profile {
   grid-row: 2 / 3;
-    width: 500px;
+  width: 100%;
+    max-width: 500px;
     height: 300px;
-    background-color: $background;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 4px 19px rgba(151, 151, 151, 0.25);
+    padding: 0px 25px;
+
 
     * {
         margin: 15px 0px;
