--- a/styles/pages/VerifyEmail.module.scss
+++ b/styles/pages/VerifyEmail.module.scss
@@ -1,5 +1,6 @@
 .verifyEmail {
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     grid-row: 2 / 3;
     box-shadow: 0px 4px 19px rgba(151, 151, 151, 0.25);
     padding: 25px;
