--- a/styles/atoms/shared/IconButton.module.scss
+++ b/styles/atoms/shared/IconButton.module.scss
@@ -15,6 +15,7 @@
 
 @include iconBtn("danger", $danger);
 @include iconBtn("primary", $primary);
+@include iconBtn("dark", $dark);
 
 .iconBtn {
     padding: 10px;
