--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,19 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.swiper {
+  :global(.swiper-pagination-bullet) {
+    background: #ABABAB;
+    opacity: 1;
+  }
+  
+  :global(.swiper-pagination-bullet-active) {
+    background-color: #89A3C6;
+    opacity: 1;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
