New Hero With Responsive

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,6 +42,8 @@ body {
   src: url("../assets/fonts/champagne/Champagne\ &\ Limousines.ttf");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 element {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
