--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -1,63 +1,18 @@
 @import "./vars";
 
-.hero {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  max-height: 667px;
-  background-color: #fff;
-
-  @include large {
-    max-height: 800px;
+.slider {
+  // background-image: linear-gradient(to right bottom, #89a3c6, #abb8d4, #cacee2, #e6e6f0, #ffffff);
+  // background-image: url("../public/img/background.jpg");
+  background-size: cover;
+    :global(.swiper-pagination-bullet) {
+      background-color: $dark;
   }
 
-  @include extra-x-large {
-    max-height: 80vh
+  :global(.swiper-slide) {
+    width: auto;
   }
-
-  &__images {
-    display: flex;
-    width: 375;
-    height: 100%;
-    align-items: center;
-  }
-
-  &__image-sm {
-    // left: 0;
-    right: 0;
-    margin: 0 auto;
-    z-index: 1;
-    margin-top: 150px;
-    margin-left: -100px;
-
-    @include large {
-      z-index: -1;
-      margin-bottom: 400px;
-      margin-left: -100px;
-    }
-
-    @include extra-large {
-        margin-bottom: 400px;
-      margin-left: -150px;
-    }
-  }
-
-  &__image-md {
-    right: 0;
-    margin: 0 auto;
-    z-index: 1;
-    margin-top: 200px;
-    margin-left: -90px;
-
-    @include extra-large {
-        margin-top: 300px;
-    margin-left: -90px;
-    }
-  }
-
-  &__image-xl {
-    left: 0;
-    margin: 0 auto;
+  
+  :global(.swiper-pagination-bullet-active) {
+    background-color: $primary;
   }
 }
